v1.0.0/modules/schema/pages/class/FossilFuel.adoc
= `FossilFuel`
:toclevels: 4


+++The fossil fuel consumed by the non-nuclear thermal generating unit.   For example, coal, oil, gas, etc.   These are the specific fuels that the generating unit can consume.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:FossilFuel`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`FossilFuel`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
FossilFuel {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



















FuelAllocationSchedule {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ThermalGeneratingUnit {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}












FossilFuel -> FuelAllocationSchedule: FuelAllocationSchedules


FossilFuel -> ThermalGeneratingUnit: ThermalGeneratingUnit


FossilFuel -> DiagramObject: DiagramObjects


FossilFuel -> InstanceSet: InstanceSet


FossilFuel -> Name: Names


FossilFuel -> ChangeSetMember: PropertiesCIMDataObject


FossilFuel -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<ThermalGeneratingUnit,`ThermalGeneratingUnit`>>
| 1
| xref::class/ThermalGeneratingUnit.adoc[`ThermalGeneratingUnit`]
| +++A thermal generating unit may have one or more fossil fuels.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<fossilFuelType,`fossilFuelType`>>
| 0..1
| xref::enumeration/FuelType.adoc[`FuelType`]
| +++The type of fossil fuel, such as coal, oil, or gas.+++

| <<fuelCost,`fuelCost`>>
| 0..1
| xref::class/CostPerHeatUnit.adoc[`CostPerHeatUnit`]
| +++The cost in terms of heat value for the given type of fuel.+++

| <<fuelDispatchCost,`fuelDispatchCost`>>
| 0..1
| xref::class/CostPerHeatUnit.adoc[`CostPerHeatUnit`]
| +++The cost of fuel used for economic dispatching which includes: fuel cost, transportation cost,  and incremental maintenance cost.+++

| <<fuelEffFactor,`fuelEffFactor`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++The efficiency factor for the fuel (per unit) in terms of the effective energy absorbed.+++

| <<fuelHandlingCost,`fuelHandlingCost`>>
| 0..1
| xref::class/CostPerHeatUnit.adoc[`CostPerHeatUnit`]
| +++Handling and processing cost associated with this fuel.+++

| <<fuelHeatContent,`fuelHeatContent`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++The amount of heat per weight (or volume) of the given type of fuel.+++

| <<fuelMixture,`fuelMixture`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++Relative amount of the given type of fuel, when multiple fuels are being consumed.+++

| <<fuelSulfur,`fuelSulfur`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++The fuel's fraction of pollution credit per unit of heat content.+++

| <<highBreakpointP,`highBreakpointP`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++The active power output level of the unit at which the given type of fuel is switched on. This fuel (e.g., oil) is sometimes used to supplement the base fuel (e.g., coal) at high active power output levels.+++

| <<lowBreakpointP,`lowBreakpointP`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++The active power output level of the unit at which the given type of fuel is switched off. This fuel (e.g., oil) is sometimes used to stabilize the base fuel (e.g., coal) at low active power output levels.+++

| <<FuelAllocationSchedules,`FuelAllocationSchedules`>>
| 0..*
| xref::class/FuelAllocationSchedule.adoc[`FuelAllocationSchedule`]
| +++A fuel allocation schedule shall have a fossil fuel.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#fossilFuelType]
=== `fossilFuelType`
+++The type of fossil fuel, such as coal, oil, or gas.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.fossilFuelType`
| Cardinality
| 0..1
| Type
| xref::enumeration/FuelType.adoc[`FuelType`]


|===

//[discrete]
[#FuelAllocationSchedules]
=== `FuelAllocationSchedules`
+++A fuel allocation schedule shall have a fossil fuel.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.FuelAllocationSchedules`
| Cardinality
| 0..*
| Type
| xref::class/FuelAllocationSchedule.adoc[`FuelAllocationSchedule`]


|===

//[discrete]
[#fuelCost]
=== `fuelCost`
+++The cost in terms of heat value for the given type of fuel.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.fuelCost`
| Cardinality
| 0..1
| Type
| xref::class/CostPerHeatUnit.adoc[`CostPerHeatUnit`]


|===

//[discrete]
[#fuelDispatchCost]
=== `fuelDispatchCost`
+++The cost of fuel used for economic dispatching which includes: fuel cost, transportation cost,  and incremental maintenance cost.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.fuelDispatchCost`
| Cardinality
| 0..1
| Type
| xref::class/CostPerHeatUnit.adoc[`CostPerHeatUnit`]


|===

//[discrete]
[#fuelEffFactor]
=== `fuelEffFactor`
+++The efficiency factor for the fuel (per unit) in terms of the effective energy absorbed.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.fuelEffFactor`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#fuelHandlingCost]
=== `fuelHandlingCost`
+++Handling and processing cost associated with this fuel.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.fuelHandlingCost`
| Cardinality
| 0..1
| Type
| xref::class/CostPerHeatUnit.adoc[`CostPerHeatUnit`]


|===

//[discrete]
[#fuelHeatContent]
=== `fuelHeatContent`
+++The amount of heat per weight (or volume) of the given type of fuel.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.fuelHeatContent`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#fuelMixture]
=== `fuelMixture`
+++Relative amount of the given type of fuel, when multiple fuels are being consumed.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.fuelMixture`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

//[discrete]
[#fuelSulfur]
=== `fuelSulfur`
+++The fuel's fraction of pollution credit per unit of heat content.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.fuelSulfur`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#highBreakpointP]
=== `highBreakpointP`
+++The active power output level of the unit at which the given type of fuel is switched on. This fuel (e.g., oil) is sometimes used to supplement the base fuel (e.g., coal) at high active power output levels.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.highBreakpointP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#lowBreakpointP]
=== `lowBreakpointP`
+++The active power output level of the unit at which the given type of fuel is switched off. This fuel (e.g., oil) is sometimes used to stabilize the base fuel (e.g., coal) at low active power output levels.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.lowBreakpointP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ThermalGeneratingUnit]
=== `ThermalGeneratingUnit`
+++A thermal generating unit may have one or more fossil fuels.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.ThermalGeneratingUnit`
| Cardinality
| 1
| Type
| xref::class/ThermalGeneratingUnit.adoc[`ThermalGeneratingUnit`]


|===


