v1.1.0/modules/schema/pages/class/FossilFuel.adoc
= `FossilFuel`
:toclevels: 4


+++The fossil fuel consumed by the non-nuclear thermal generating unit.   For example, coal, oil, gas, etc.   These are the specific fuels that the generating unit can consume.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:FossilFuel`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`FossilFuel`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<FuelAllocationSchedules,`FuelAllocationSchedules`>>
//| [[slots_table.FuelAllocationSchedules]]<<FuelAllocationSchedules,`FuelAllocationSchedules`>>
| 0..* +
xref::class/FuelAllocationSchedule.adoc[`FuelAllocationSchedule`]
| +++A fuel allocation schedule shall have a fossil fuel.+++
| _n/a_

| <<ThermalGeneratingUnit,`ThermalGeneratingUnit`>>
//| [[slots_table.ThermalGeneratingUnit]]<<ThermalGeneratingUnit,`ThermalGeneratingUnit`>>
| 1 +
xref::class/ThermalGeneratingUnit.adoc[`ThermalGeneratingUnit`]
| +++A thermal generating unit may have one or more fossil fuels.+++
| _n/a_

| <<fossilFuelType,`fossilFuelType`>>
//| [[slots_table.fossilFuelType]]<<fossilFuelType,`fossilFuelType`>>
| 0..1 +
xref::enumeration/FuelType.adoc[`FuelType`]
| +++The type of fossil fuel, such as coal, oil, or gas.+++
| _n/a_

| <<fuelCost,`fuelCost`>>
//| [[slots_table.fuelCost]]<<fuelCost,`fuelCost`>>
| 0..1 +
xref::class/CostPerHeatUnit.adoc[`CostPerHeatUnit`]
| +++The cost in terms of heat value for the given type of fuel.+++
| _n/a_

| <<fuelDispatchCost,`fuelDispatchCost`>>
//| [[slots_table.fuelDispatchCost]]<<fuelDispatchCost,`fuelDispatchCost`>>
| 0..1 +
xref::class/CostPerHeatUnit.adoc[`CostPerHeatUnit`]
| +++The cost of fuel used for economic dispatching which includes: fuel cost, transportation cost,  and incremental maintenance cost.+++
| _n/a_

| <<fuelEffFactor,`fuelEffFactor`>>
//| [[slots_table.fuelEffFactor]]<<fuelEffFactor,`fuelEffFactor`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++The efficiency factor for the fuel (per unit) in terms of the effective energy absorbed.+++
| _n/a_

| <<fuelHandlingCost,`fuelHandlingCost`>>
//| [[slots_table.fuelHandlingCost]]<<fuelHandlingCost,`fuelHandlingCost`>>
| 0..1 +
xref::class/CostPerHeatUnit.adoc[`CostPerHeatUnit`]
| +++Handling and processing cost associated with this fuel.+++
| _n/a_

| <<fuelHeatContent,`fuelHeatContent`>>
//| [[slots_table.fuelHeatContent]]<<fuelHeatContent,`fuelHeatContent`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++The amount of heat per weight (or volume) of the given type of fuel.+++
| _n/a_

| <<fuelMixture,`fuelMixture`>>
//| [[slots_table.fuelMixture]]<<fuelMixture,`fuelMixture`>>
| 0..1 +
xref::class/PerCent.adoc[`PerCent`]
| +++Relative amount of the given type of fuel, when multiple fuels are being consumed.+++
| _n/a_

| <<fuelSulfur,`fuelSulfur`>>
//| [[slots_table.fuelSulfur]]<<fuelSulfur,`fuelSulfur`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++The fuel's fraction of pollution credit per unit of heat content.+++
| _n/a_

| <<highBreakpointP,`highBreakpointP`>>
//| [[slots_table.highBreakpointP]]<<highBreakpointP,`highBreakpointP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++The active power output level of the unit at which the given type of fuel is switched on. This fuel (e.g., oil) is sometimes...+++
| _n/a_

| <<lowBreakpointP,`lowBreakpointP`>>
//| [[slots_table.lowBreakpointP]]<<lowBreakpointP,`lowBreakpointP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++The active power output level of the unit at which the given type of fuel is switched off. This fuel (e.g., oil) is...+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#fossilFuelType]
=== `fossilFuelType`
+++The type of fossil fuel, such as coal, oil, or gas.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.fossilFuelType`
| Cardinality
| 0..1
| Type
| xref::enumeration/FuelType.adoc[`FuelType`]


|===

////
[.text-left]
--
<<slots_table.fossilFuelType,&#10548;>>
--
////


//[discrete]
[#FuelAllocationSchedules]
=== `FuelAllocationSchedules`
+++A fuel allocation schedule shall have a fossil fuel.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.FuelAllocationSchedules`
| Cardinality
| 0..*
| Type
| xref::class/FuelAllocationSchedule.adoc[`FuelAllocationSchedule`]


|===

////
[.text-left]
--
<<slots_table.FuelAllocationSchedules,&#10548;>>
--
////


//[discrete]
[#fuelCost]
=== `fuelCost`
+++The cost in terms of heat value for the given type of fuel.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.fuelCost`
| Cardinality
| 0..1
| Type
| xref::class/CostPerHeatUnit.adoc[`CostPerHeatUnit`]


|===

////
[.text-left]
--
<<slots_table.fuelCost,&#10548;>>
--
////


//[discrete]
[#fuelDispatchCost]
=== `fuelDispatchCost`
+++The cost of fuel used for economic dispatching which includes: fuel cost, transportation cost,  and incremental maintenance cost.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.fuelDispatchCost`
| Cardinality
| 0..1
| Type
| xref::class/CostPerHeatUnit.adoc[`CostPerHeatUnit`]


|===

////
[.text-left]
--
<<slots_table.fuelDispatchCost,&#10548;>>
--
////


//[discrete]
[#fuelEffFactor]
=== `fuelEffFactor`
+++The efficiency factor for the fuel (per unit) in terms of the effective energy absorbed.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.fuelEffFactor`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fuelEffFactor,&#10548;>>
--
////


//[discrete]
[#fuelHandlingCost]
=== `fuelHandlingCost`
+++Handling and processing cost associated with this fuel.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.fuelHandlingCost`
| Cardinality
| 0..1
| Type
| xref::class/CostPerHeatUnit.adoc[`CostPerHeatUnit`]


|===

////
[.text-left]
--
<<slots_table.fuelHandlingCost,&#10548;>>
--
////


//[discrete]
[#fuelHeatContent]
=== `fuelHeatContent`
+++The amount of heat per weight (or volume) of the given type of fuel.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.fuelHeatContent`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.fuelHeatContent,&#10548;>>
--
////


//[discrete]
[#fuelMixture]
=== `fuelMixture`
+++Relative amount of the given type of fuel, when multiple fuels are being consumed.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.fuelMixture`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

////
[.text-left]
--
<<slots_table.fuelMixture,&#10548;>>
--
////


//[discrete]
[#fuelSulfur]
=== `fuelSulfur`
+++The fuel's fraction of pollution credit per unit of heat content.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.fuelSulfur`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fuelSulfur,&#10548;>>
--
////


//[discrete]
[#highBreakpointP]
=== `highBreakpointP`
+++The active power output level of the unit at which the given type of fuel is switched on. This fuel (e.g., oil) is sometimes used to supplement the base fuel (e.g., coal) at high active power output levels.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.highBreakpointP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.highBreakpointP,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#lowBreakpointP]
=== `lowBreakpointP`
+++The active power output level of the unit at which the given type of fuel is switched off. This fuel (e.g., oil) is sometimes used to stabilize the base fuel (e.g., coal) at low active power output levels.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.lowBreakpointP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.lowBreakpointP,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#ThermalGeneratingUnit]
=== `ThermalGeneratingUnit`
+++A thermal generating unit may have one or more fossil fuels.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FossilFuel.ThermalGeneratingUnit`
| Cardinality
| 1
| Type
| xref::class/ThermalGeneratingUnit.adoc[`ThermalGeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.ThermalGeneratingUnit,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/FuelAllocationSchedule.adoc[`FuelAllocationSchedule`] | xref::class/FuelAllocationSchedule.adoc#FossilFuel[`FossilFuel`]



| xref::class/ThermalGeneratingUnit.adoc[`ThermalGeneratingUnit`] | xref::class/ThermalGeneratingUnit.adoc#FossilFuels[`FossilFuels`]


|===

